--- a/src/css/application.css
+++ b/src/css/application.css
@@ -23,5 +23,23 @@
 //
 
 // Avoid having rectangular frames on the status bar
-QStatusBar::item { border: 0px solid black }
+QStatusBar::item
+{
+    border: 0px solid black
+}
+
+// Nicer tooltips
+QToolTip
+{
+    font-size: 11px;
+    border: 1px solid gray;
+    border-radius: 3px;
+    background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #eef, stop: 1 #ccf );
+}
+
+// More distinguishable interlacing
+QTreeView
+{
+    alternate-background-color: #eef0f1;
+}
 
