--- a/src/skins/default/application.css
+++ b/src/skins/default/application.css
@@ -31,6 +31,7 @@ QStatusBar::item
 // Nicer tooltips
 QToolTip
 {
+    color: black;
     font-size: 11px;
     border: 1px solid gray;
     border-radius: 3px;
