Remove dotted outline from QComboBox items

--- a/src/skins/default/application.css
+++ b/src/skins/default/application.css
@@ -55,6 +55,11 @@ QComboBox
     background-color: #ffffe6;
 }
 
+QComboBox QAbstractItemView
+{
+    outline: 0px;
+}
+
 QTextEdit
 {
     background-color: #ffffe6;
