Adding QPlainTextEditor background

--- a/src/skins/default/application.css
+++ b/src/skins/default/application.css
@@ -66,6 +66,11 @@ QTextEdit
     background-color: #ffffe6;
 }
 
+QPlainTextEdit
+{
+    background-color: #ffffe6;
+}
+
 QListView
 {
     background-color: #ffffe6;
