--- a/src/skins/default/application.css
+++ b/src/skins/default/application.css
@@ -1,34 +1,27 @@
-//
-// codimension - graphics python two-way code editor and analyzer
-// Copyright (C) 2010  Sergey Satskiy <sergey.satskiy@gmail.com>
-//
-// This program is free software: you can redistribute it and/or modify
-// it under the terms of the GNU General Public License as published by
-// the Free Software Foundation, either version 3 of the License, or
-// (at your option) any later version.
-//
-// This program is distributed in the hope that it will be useful,
-// but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-// GNU General Public License for more details.
-//
-// You should have received a copy of the GNU General Public License
-// along with this program.  If not, see <http://www.gnu.org/licenses/>.
-//
-// $Id$
-//
-// Certain form style sheet file
-// It supports remarks, empty lines,
-// INCLUDE <path to another css file>
-//
+/* codimension - graphics python two-way code editor and analyzer        */
+/* Copyright (C) 2010  Sergey Satskiy <sergey.satskiy@gmail.com>         */
+/*                                                                       */
+/* This program is free software: you can redistribute it and/or modify  */
+/* it under the terms of the GNU General Public License as published by  */
+/* the Free Software Foundation, either version 3 of the License, or     */
+/* (at your option) any later version.                                   */
+/*                                                                       */
+/* This program is distributed in the hope that it will be useful,       */
+/* but WITHOUT ANY WARRANTY; without even the implied warranty of        */
+/* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         */
+/* GNU General Public License for more details.                          */
+/*                                                                       */
+/* You should have received a copy of the GNU General Public License     */
+/* along with this program.  If not, see <http://www.gnu.org/licenses/>. */
+/*                                                                       */
 
-// Avoid having rectangular frames on the status bar
+/* Avoid having rectangular frames on the status bar */
 QStatusBar::item
 {
     border: 0px solid black
 }
 
-// Nicer tooltips
+/* Nicer tooltips */
 QToolTip
 {
     color: black;
@@ -38,7 +31,7 @@ QToolTip
     background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #eef, stop: 1 #ccf );
 }
 
-// More distinguishable interlacing
+/* More distinguishable interlacing */
 QTreeView
 {
     alternate-background-color: #eef0f1;
