--- a/src/skins/default/app.css
+++ b/src/skins/default/app.css
@@ -27,8 +27,8 @@ QToolTip
     color: black;
     font-size: 11px;
     border: 1px solid gray;
-    border-radius: 3px;
-    background: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #eef, stop: 1 #ccf );
+    background-color: #fff;
+    padding: 2px;
 }
 
 /* More distinguishable interlacing */
